# c4

./: .gitignore  Cargo.toml  Makefile  README.md  install.sh
.claude/: CLAUDE.md  settings.json
src/: config.rs  main.rs  updater.rs
src/monitor/: hotkey.rs  mod.rs  watcher.rs
src/session/: cost.rs  discovery.rs  mod.rs  parser.rs  status.rs
src/tui/: app.rs  ui.rs
