[package]
name = "c4"
version = "0.2.4"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "6"
libc = "0.2"
notify = "7"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
rdev = "0.5"
toml = "0.8"
serde_json = "1"
